index.html updated

--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
                         <li><i class="fa-solid fa-stamp" style="color: #103c6a;"></i>
                             <span>2023 BTK AKADEMI CSS</span>
                         </li>
+                        <li><i class="fa-solid fa-stamp" style="color: #103c6a;"></i>
+                            <span>2023 BTK AKADEMI HTML5 Web Geliştirme</span>
+                        </li>
                     </ul>
                 </section>
             </div>
