--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
                         <li><i class="fa-solid fa-stamp" style="color: #103c6a;"></i>
                             <span>2023 Kodluyoruz Hi-Kod FrontEnd Atölyesi</span>
                         </li>
+                        <li><i class="fa-solid fa-stamp" style="color: #103c6a;"></i>
+                            <span>2023 BTK AKADEMI Web Sitesi Kullanılabilirliği</span>
+                        </li>
                     </ul>
                 </section>
             </div>
